fixed navbar text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -7,24 +7,26 @@
     background-image: -webkit-gradient(linear, 50.00% 0.00%, 50.00% 100.00%, color-stop( 0% , rgba(0,0,0,0.00)),color-stop( 100% , rgba(0,0,0,0.00)));
     background-image: -webkit-linear-gradient(270deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
     background-image: linear-gradient(180deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
-	 font-size: 1.8em !important;
+	font-size: 1.8em !important;
 }
 
-.nav-item{
+.nav-item {
     text-align: right;
 }
 
-.dropdown-menu{
+.dropdown-menu {
    background-color: rgba(255, 255, 255, .25) !important;
-   margin: 0;
    list-style: none;
    white-space: nonwrap;
-   border: 1px solid black;
+   border: 0px solid black;
    padding: 5px;
    background-color: #ffffff;
    width: auto !important;
    height: auto !important;
 }
+
+.dropdown-item {
+   text-align: right;
 }
 
 /* HEADER/BODY/CONTAINER/FOOTER CSS */
@@ -58,7 +60,7 @@
 	display: table-cell;
 	vertical-align: top;
 
-    padding-left: 50px;
+    padding-left: 25px;
 	text-align: left;
 }
 
@@ -72,7 +74,8 @@
 
 /* INDEX CSS */
 #aboutMe {
-	margin-top: -140px;
+	margin-top: -100px;
+	margin-bottom: 15px;
 }
 
 
